tests/ui/resolve/issue-50599.stderr
error[E0425]: cannot find value `LOG10_2` in module `std::f64`
  --> $DIR/issue-50599.rs:3:48
   |
LL |     const M: usize = (f64::from(N) * std::f64::LOG10_2) as usize;
   |                                                ^^^^^^^ not found in `std::f64`
   |
help: consider importing one of these constants
   |
LL + use std::f128::consts::LOG10_2;
   |
LL + use std::f16::consts::LOG10_2;
   |
LL + use std::f32::consts::LOG10_2;
   |
LL + use std::f64::consts::LOG10_2;
   |
help: if you import `LOG10_2`, refer to it directly
   |
LL -     const M: usize = (f64::from(N) * std::f64::LOG10_2) as usize;
LL +     const M: usize = (f64::from(N) * LOG10_2) as usize;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
